# Call-me-maybe

./: Makefile  README.md  dependencias  pyproject.toml
data/input/: break_inputs.json  function_calling_tests.json  functions_definition.json  invalid_functions.json  invalid_input.json  ultimate_functions.json  ultimate_input.json
data/output/:                              function_calling_resultsresult.json  break_functions.json  function_calling_results.json  ress.json  result.json
src/: __main__.py  decoding.py  engine.py  llm_engine.py  models.py  parser.py  pipeline.py
